@@ -1,0 +1,2 @@
+prog: gnu_binutils_nop
+vgopts: -q
